# JaxGraphOT

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  debugging-and-diagnostics.md  examples-guide.md  getting-started.md  graph-model.md  index.md  numerical-limitations.md  solver-overview.md
examples/: README.md  _common.py
examples/cycle_neighbor_transport/: run.py
examples/directed_reversible_transport/: run.py
examples/large_grid_transport/: run.py
examples/line_chain_transport/: run.py
examples/two_node_benchmark/: run.py
src/jax_graph_ot/: linear_solvers.py  means.py  operators.py  pdhg.py  projections.py
src/jgot/: __init__.py  _jax_config.py  graph.py  linear_solvers.py  means.py  operators.py  pdhg.py  projections.py  solver.py  types.py
tests/: test_examples_helpers.py  test_graph.py  test_means.py  test_operators.py  test_projections.py  test_solver.py
