[project]
name = "jgot"
version = "0.1.0"
description = "Dynamic optimal transport on sparse reversible graphs in JAX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jax>=0.8,<0.9",
  "matplotlib>=3.10",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jgot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I"]
