[project]
name = "jgot"
version = "0.1.2"
description = "Dynamic optimal transport on sparse reversible graphs in JAX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
  { name = "LvDAO" },
]
dependencies = [
  "jax>=0.8,<0.9",
]
keywords = [
  "optimal transport",
  "jax",
  "graphs",
  "wasserstein",
  "numerical optimization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.10",
]

[project.urls]
Homepage = "https://github.com/LvDAO/JaxGraphOT"
Repository = "https://github.com/LvDAO/JaxGraphOT"
Issues = "https://github.com/LvDAO/JaxGraphOT/issues"
Documentation = "https://github.com/LvDAO/JaxGraphOT/tree/main/docs"

[dependency-groups]
dev = [
  "bump-my-version>=1.2.7",
  "matplotlib>=3.10",
  "pypdf>=6.7.5",
  "pytest>=8.3",
  "ruff>=0.12",
  "twine>=6",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jgot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bumpversion]
current_version = "0.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
commit = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
